--- a/index.html
+++ b/index.html
@@ -258,16 +258,16 @@
                 </div>
                 <div class="col-md-9 mt-5" >
                     <div class="row justify-content-center mt-5">
-                        <div class="col-md-3  div-container">
-                            <img class="img-fluid animated" src="https://doodleipsum.com/700x1244/hand-drawn?bg=5271ff&i=e8a34dae3102efab7cdc03581730a630" alt="">
+                        <div class="col-md-3  div-container animated">
+                            <img class="img-fluid " src="https://doodleipsum.com/700x1244/hand-drawn?bg=5271ff&i=e8a34dae3102efab7cdc03581730a630" alt="">
                             <a href=""><i class="fa fa-play play-icon"></i></a>
                         </div>
-                        <div class="col-md-3  div-container">
-                            <img class="img-fluid animated" src="https://doodleipsum.com/700x1244/outline?bg=ffbd59&i=6af2a2dcb4ffbc4eac472462fcf1c371" alt="">
+                        <div class="col-md-3  div-container animated">
+                            <img class="img-fluid " src="https://doodleipsum.com/700x1244/outline?bg=ffbd59&i=6af2a2dcb4ffbc4eac472462fcf1c371" alt="">
                             <a href=""><i class="fa fa-play play-icon"></i></a>
                         </div>
-                        <div class="col-md-3 div-container">
-                            <img class="img-fluid animated" src="https://doodleipsum.com/700x1244/hand-drawn?bg=8c52ff&i=6046b13cfc8fb2fbd8c33f8a39474407" alt="">
+                        <div class="col-md-3 div-container animated">
+                            <img class="img-fluid" src="https://doodleipsum.com/700x1244/hand-drawn?bg=8c52ff&i=6046b13cfc8fb2fbd8c33f8a39474407" alt="">
                             <a href=""><i class="fa fa-play play-icon"></i></a>
                         </div>
                     </div>
